--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/layout"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical">
+              android:orientation="vertical"
+    >
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
@@ -16,30 +18,14 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        app:tabPaddingStart="10dp"
-        app:tabPaddingBottom="10dp"
-        app:tabPadding="10dp"
-        app:tabPaddingEnd="10dp"
-        app:tabPaddingTop="10dp"
-        app:tabMode="fixed"
-        app:tabIndicatorHeight="3dp"
+        android:layout_height="60dp"
         app:tabIndicatorColor="#FF69B4"
+        app:tabIndicatorHeight="3dp"
+        app:tabGravity="fill"
+        app:tabMode="fixed"
         app:tabTextColor="#000000"
-        app:tabTextAppearance="@style/Base.TextAppearance.AppCompat.Large"
-       >
+        >
 
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="消息"
-            />
-
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="个人主页"
-            />
 
     </android.support.design.widget.TabLayout>
 
